Live bug squashing (#53)
* PBP should disappear now when done, fixes #681

* Fixed svgs from going white, was caused by IDs with the same name

* Added sql optimizations for /api/lineups/current call

* Fixed player pane to have matching inning arrow as scoreboard, fixes #690

* If the game hasn't started, don't show innings, fixes #678

* Player panel, teams now in correct order, fixes #686

* Fixing standings pane to have proper buyin, winnings, and heights on lists, fixes #680

* If lineup is done and no longer showing up in api, then reset live section

* No buyin needed before you start watching

* Updated nav to show sport with most games, even after loading

* Dynamic player images in standings added

--- a/static/src/sass/blocks/live-pane.scss
+++ b/static/src/sass/blocks/live-pane.scss
@@ -4,8 +4,9 @@
 // right or left hand pane that slides out on trigger. also includes a back button to close out.
 .live-pane {
   height: 100%;
+  padding-top: $nav-scoreboard-height;
   position: fixed;
-  top: $nav-scoreboard-height;
+  top: 0;
   transition: all 230ms cubic-bezier(.8,.16,.18,.85);
   width: $live-pane-width;
   z-index: $zindex-modal + 4061;
@@ -41,7 +42,7 @@
     height: 20px;
     visibility: hidden;
     position: absolute;
-    top: 60px;
+    top: $nav-scoreboard-height + 60px;
     width: 35px;
     z-index: $zindex-modal + 2;
 
@@ -66,7 +67,7 @@
     height: 100%;
     left: 56px;
     position: absolute;
-    top: 0;
+    top: $nav-scoreboard-height;
     width: 121px;
   }
 }
